[package]
name = "sekursranko"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"

[dependencies]
clap = "2"
env_logger = "0.6"
futures = "0.1"
futures-fs = "0.0.5"
hyper = "0.12"
log = "0.4"
rand = "0.7"
route-recognizer = "0.1"
serde = "1.0"
serde_derive = "*"
serde_json = "1.0"
tokio = "0.1"
toml = "0.5"

[dev-dependencies]
reqwest = "0.9"
tempfile = "3"
