[package]
name = "sekursranko"
version = "0.2.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"

[dependencies]
anyhow = "1"
clap = "2"
env_logger = "0.8"
futures = "0.3"
hyper = { version = "0.14", features = ["http1", "server", "runtime", "stream"] }
log = "0.4"
rand = "0.8"
route-recognizer = "0.3"
serde = "1.0"
serde_derive = "*"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros",  "fs", "io-util"] }
toml = "0.5"

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tempfile = "3"
